tests/TypingSpec/invalid/prog/recursion.algst
foo : Bool -> Int
foo = rec go : Bool -o Int = \(a:Bool) -o go a
